--- a/backend/src/main/resources/application-docker.yml
+++ b/backend/src/main/resources/application-docker.yml
@@ -13,3 +13,15 @@
         properties:
           hibernate:
             format_sql: true
+      mail:
+        host: smtp.gmail.com
+        port: 587
+        username: FILL_THIS
+        password: FILL_THIS
+        properties:
+          mail:
+            smtp:
+              auth: true
+              starttls:
+                enable: true
+                required: true
