--- a/backend/src/main/resources/application-docker.yml
+++ b/backend/src/main/resources/application-docker.yml
@@ -1,4 +1,7 @@
     spring:
+      redis:
+        host: redis
+        port: 6379
       datasource:
         url: jdbc:postgresql://postgres-sql:5432/test
         username: username
