Added OpenApi docs

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
     include-message: always
 spring:
   profiles:
-    active: docker
+    active: dev
   jpa:
     hibernate:
       ddl-auto: update
