--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,8 @@
 node_modules/
 build/
 .vscode/
+templates/
+
 
 .env.local
 .env.development.local
@@ -10,4 +12,3 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
