--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,17 +24,15 @@
     "react-hook-form": "^7.49.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview",
     "c": "generate-react component"
   },
   "eslintConfig": {
@@ -54,5 +52,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@rsbuild/core": "^0.3.8",
+    "@rsbuild/plugin-react": "^0.3.8",
+    "@rsbuild/plugin-svgr": "^0.4.0"
   }
 }
