--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.49.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
